--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,11 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/next"
+      "use": "@vercel/next",
+      "config": {
+        "buildCommand": "npm run build",
+        "installCommand": "npm install"
+      }
     }
   ]
 }
